# tispect

./: .gitignore  Cargo.toml  README.md
example_files/: 01.json  02.json
src/: app.rs  logger.rs  main.rs  simple_matcher.rs  utils.rs
src/components/: log_popup.rs  mod.rs  query.rs  viewer.rs
src/value/: contained_value.rs  mod.rs  parser.rs  value.pest  writer.rs
src/vi/: mod.rs  vimotions.rs  vistate.rs
